fix: allow color picker to overflow step container

--- a/frontend/express/public/stylesheets/vue/clyvue.scss
+++ b/frontend/express/public/stylesheets/vue/clyvue.scss
@@ -4489,6 +4489,7 @@
 
     /* .cly-content-builder-sidebar-step .el-collapse-item__wrap */
     & .el-collapse-item__wrap {
+        overflow: visible;
         border: none;
     }
 
